--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://hamidimahdi92.github.io/e-commerce-project",
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "firebase": "^8.4.3",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.12.0",
     "react": "^17.0.1",
     "react-dom": "^16.8.6",
@@ -19,6 +21,8 @@
     "babel-jest": "^24.7.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
